--- a/src/styles/_tailwind/_utils.css
+++ b/src/styles/_tailwind/_utils.css
@@ -5,3 +5,7 @@
 @utility flex-center {
   @apply flex justify-center items-center;
 }
+
+@utility invert-colors {
+  @apply invert dark:invert-0;
+}
