--- a/src/styles/_tailwind/_colors.css
+++ b/src/styles/_tailwind/_colors.css
@@ -1,3 +1,15 @@
+@utility heading-color-primary {
+  @apply text-dark-100 dark:text-light-900;
+}
+
+@utility heading-color-secondary {
+  @apply text-dark-200 dark:text-light-900;
+}
+
+@utility body-color {
+  @apply text-dark-500 dark:text-light-700;
+}
+
 @utility bg-navbar {
   @apply bg-light-900 dark:bg-[#0f111780];
 }
