--- a/src/styles/_tailwind/_theme.css
+++ b/src/styles/_tailwind/_theme.css
@@ -47,13 +47,13 @@
 
 /* ShadCN theme */
 @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
-  --radius-2xl: calc(var(--radius) + 8px);
-  --radius-3xl: calc(var(--radius) + 12px);
-  --radius-4xl: calc(var(--radius) + 16px);
+  --radius-sm: calc(var(--radius) - 4px); /* 4px */
+  --radius-md: calc(var(--radius) - 2px); /* 6px */
+  --radius-lg: var(--radius); /* 8px */
+  --radius-xl: calc(var(--radius) + 4px); /* 12px */
+  --radius-2xl: calc(var(--radius) + 8px); /* 16px */
+  --radius-3xl: calc(var(--radius) + 12px); /* 20px */
+  --radius-4xl: calc(var(--radius) + 16px); /* 24px */
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -88,7 +88,7 @@
 }
 
 :root {
-  --radius: 0.625rem;
+  --radius: 0.625rem; /* 10px */
   --background: oklch(100% 0 0deg);
   --foreground: oklch(12.9% 0.042 264.695deg);
   --card: oklch(100% 0 0deg);
